packages/toolkit/components/header/_header.scss
/* ... */
.ofh-header__nav-link {
  @include ofh-header-link-no-visited-state(
    var(--ofh-header-bottom-navigation-color),
    var(--ofh-header-bottom-navigation-color),
    null,
    var(--ofh-header-bottom-navigation-color)
  );
}

.ofh-header__nav-link--current,
.ofh-header__nav-trigger--current {
  &::after {
    background-color: var(--ofh-header-bottom-navigation-color);
  }
}

.ofh-header__nav-item.is-open {
  .ofh-header__nav-trigger {
    z-index: 6;

    &::after {
      background-color: var(--ofh-header-bottom-navigation-color);
      height: $ofh-stroke-weight-8;
    }
  }

  .ofh-header__nav-icon--down {
    display: none;
  }

  .ofh-header__nav-icon--up {
    display: inline-flex;
  }
}

.ofh-header__nav-trigger--open {
  z-index: 6;

  &::after {
    background-color: var(--ofh-header-bottom-navigation-color);
    height: $ofh-stroke-weight-8;
  }
}

.ofh-header__nav-icon--up,
.ofh-header__mobile-trigger-icon--up {
  display: none;
}

.ofh-header__nav-panel {
  border: $ofh-stroke-weight-2 solid $ofh-color-border-primary-inverted;
  inline-size: fit-content;
  left: 0;
  max-inline-size: calc(100vw - #{$ofh-size-32});
  min-inline-size: 300px;
  position: absolute;
  top: calc(100% + #{$ofh-stroke-weight-4});
  z-index: 5;
}

.ofh-header__nav-panel-list {
  display: flex;
  flex-direction: column;
  inline-size: fit-content;
  min-inline-size: 100%;
}

.ofh-header__nav-panel-link {
  @include ofh-typography-responsive('paragraph-sm');
  @include ofh-header-link-no-visited-state(
    var(--ofh-header-list-item-color),
    var(--ofh-header-list-item-color),
    null,
    var(--ofh-header-list-item-color)
  );

  align-items: center;
  background-color: var(--ofh-header-list-item-background);
  color: var(--ofh-header-list-item-color);
  display: flex;
  min-height: 56px;
  text-decoration: none;
  width: auto;

  @include ofh-responsive-padding(12, 'vertical');
  @include ofh-responsive-padding(16, 'horizontal');

  &:hover {
    background-color: var(--ofh-header-list-item-background);
    text-decoration: underline;
  }

  &:focus,
  &:focus-visible {
    position: relative;
    z-index: 1;
  }
}

.ofh-header__nav-panel-label {
  white-space: nowrap;
}

.ofh-header__nav-panel-item + .ofh-header__nav-panel-item {
  border-top: 1px solid $ofh-color-border-primary;
}

.ofh-header__nav-panel-link--current {
  @include ofh-header-link-no-visited-state(
    $ofh-color-foreground-primary,
    $ofh-color-foreground-primary,
    null,
    $ofh-color-foreground-primary
  );

  background-color: $ofh-color-background-primary;
  border-left: $ofh-stroke-weight-4 solid var(--ofh-header-list-item-selected-border);
  color: $ofh-color-foreground-primary;

  &:hover {
    background-color: $ofh-color-background-primary;
    text-decoration: none;
  }
}

.ofh-header__mobile-panel {
  background-color: $ofh-color-background-primary;
  overflow: clip;
}

.ofh-header__mobile-nav-list {
  background-color: $ofh-color-background-primary;
  width: 100%;
}

.ofh-header__mobile-nav-item {
  background-color: var(--ofh-header-list-item-background);
  border-top: 1px solid $ofh-color-border-primary;
}

.ofh-header__mobile-link,
.ofh-header__mobile-trigger {
  @include ofh-typography-responsive('paragraph-sm');

  align-items: center;
  display: flex;
  min-height: 56px;
  width: 100%;

  @include ofh-responsive-padding(12, 'vertical');
  @include ofh-responsive-padding(16, 'horizontal');
}

.ofh-header__mobile-link,
.ofh-header__mobile-subnav-link {
  justify-content: flex-start;
}

.ofh-header__mobile-link {
  @include ofh-header-link-no-visited-state(
    var(--ofh-header-list-item-color),
    var(--ofh-header-list-item-color),
    null,
    var(--ofh-header-list-item-color)
  );

  background-color: var(--ofh-header-list-item-background);
  text-decoration: none;
}

.ofh-header__mobile-link--current {
  background-color: $ofh-color-background-primary;
  border-left: $ofh-stroke-weight-4 solid var(--ofh-header-list-item-selected-border);
  color: $ofh-color-foreground-primary;
}

.ofh-header__mobile-trigger {
  align-items: center;
  background-color: var(--ofh-header-list-item-background);
  border: 0;
  color: var(--ofh-header-list-item-color);
  cursor: pointer;
  display: flex;
  justify-content: space-between;
  margin: 0;
  text-align: left;
}

.ofh-header__mobile-nav-item.is-open,
.ofh-header__mobile-nav-item--open {
  background-color: var(--ofh-header-list-item-background);
  display: flex;
  flex-direction: column;

  @include ofh-responsive-gap-y(32);
  @include ofh-responsive-padding(12, 'vertical');
  @include ofh-responsive-padding(16, 'horizontal');

  .ofh-header__mobile-trigger-icon--down {
    display: none;
  }

  .ofh-header__mobile-trigger-icon--up {
    display: inline-flex;
  }

  .ofh-header__mobile-trigger {
    min-height: 0;
    padding: 0;
  }

  .ofh-header__mobile-subnav {
    @include ofh-responsive-gap-y(32);

    padding: 0;
  }
}

.ofh-header__mobile-subnav {
  display: grid;
}

.ofh-header__mobile-panel[hidden],
.ofh-header__mobile-subnav[hidden] {
  display: none;
}

.ofh-header__mobile-subnav-link {
  @include ofh-typography-responsive('paragraph-sm');
  @include ofh-header-link-no-visited-state(
    var(--ofh-header-list-item-color),
    var(--ofh-header-list-item-color),
    null,
    var(--ofh-header-list-item-color)
  );

  display: block;
  padding: 0;
  text-decoration: none;
}

.ofh-header__mobile-subnav-link--current {
  text-decoration: none;
}

@include mq($from: desktop) {
  .ofh-header__header-desktop-tools {
    display: inline-flex;
  }

  .ofh-header__navigation {
    display: block;
  }

  .ofh-header__menu-button,
  .ofh-header__mobile-panel {
    display: none;
  }
}
/* ... */

